<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parameter_expression</name>
  <version>0.0.2</version>
  <description>Using mathematical expression in ROS 2 parameter</description>
  <maintainer email="f0reach@f0reach.me">f0reachARR</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>muparser</depend>
  <depend>std_msgs</depend>

  <build_depend>pkg-config</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>